# waypoint-global-planner

./: CMakeLists.txt  ipbgp_plugin.xml  package.xml
include/waypoint_global_planner/: interpolate_global_planner.h
src/: interpolate_global_planner.cpp
